# bap

./: build_bap.sh
.github/workflows/: release.yml
lib/arm/: arm_lifter.ml  arm_utils.ml
lib/bap_core_theory/: bap_core_theory.mli  bap_core_theory_program.ml
lib/bap_disasm/: bap_disasm_insn.ml  bap_disasm_linear_sweep.ml
lib/bap_primus/: bap_primus_lisp_types.ml
lib/bap_types/: bap_bili.ml  bap_stmt.ml
oasis/: asli
opam/: opam
plugins/arm/semantics/: aarch64-arithmetic.lisp  aarch64-data-movement.lisp  aarch64-logical.lisp  aarch64.lisp  arm-bits.lisp
plugins/asli/: asli.ml  dune
plugins/asli/semantics/: dune  override.asl
plugins/barrier/: barriercopy.ml
plugins/bil/: bil_lifter.ml
plugins/disassemble/: disassemble_main.ml
plugins/primus_lisp/: primus_lisp_main.ml  primus_lisp_primitives.ml  primus_lisp_semantic_primitives.ml
src/: bap_frontend.ml
tools/: release.sh
